# sandbox

./: .env.example  .env.production  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  nginx.conf  nginx.ssl.conf  package-lock.json  package.json
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/app/: config.py  main.py  run.py
apps/backend/app/api/: __init__.py
apps/backend/app/api/dependencies/: database.py
apps/backend/app/api/v1/: health.py
apps/backend/app/core/: config.py  database.py  redis.py
apps/backend/app/models/: __init__.py  account.py  api_key.py  authenticator.py  enums.py  organization.py  organization_invitation.py  organization_member.py  session.py  user.py  verification_token.py
apps/frontend/: .dockerignore  Dockerfile  package.json
scripts/: init-ssl.sh
