[project]
name = "sandbox"
version = "0.1.0"
description = "Sandbox FastAPI backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
sandbox = "app.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
